组件抽离中

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "bootstrap-admin": "^2.0.1",
+    "highlight": "^0.2.4",
+    "highlight.js": "^11.9.0",
     "markdown-it": "^14.0.0",
     "vue": "^3.3.11",
     "vue-router": "^4.0.13"
