--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "bootstrap-admin": "^2.0.1",
     "element-plus": "^2.5.2",
     "highlight": "^0.2.4",
