--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "highlight.js": "^11.9.0",
     "markdown-it": "^14.0.0",
     "vue": "^3.3.11",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
